tests/snapshots/snapshot__minimal.md@outline.snap
---
source: tests/snapshot.rs
expression: outline(&doc)
---
Document
  Paragraph
    Text("one word")
